# CalibrationTools

./: .gitignore  100_Final_project.ipynb  CMakeLists.txt  README.md  calibration.conf.in  exctract_OM_spectra.cxx  fit_spectra.cpp  install.sh  temp_sub.sh
CalibrationCutsModule/: CMakeLists.txt  calibration_cuts.conf.in  install.sh  source_positions.txt.in
CalibrationCutsModule/include/: calibration_cuts_module.h
CalibrationCutsModule/src/: calibration_cuts_module.cc
Charge2EnergyModule/: CMakeLists.txt  charge2energy.conf.in  install.sh
Charge2EnergyModule/include/: charge2energy_module.h
Charge2EnergyModule/src/: charge2energy_module.cc
EnergyCorrectionCalculator/: CMakeLists.txt
EnergyCorrectionCalculator/include/: energy_correction_calculator.h
EnergyCorrectionCalculator/src/: energy_correction_calculator.cc
SNCalib/: CMakeLists.txt  install.sh  params.conf.in
SNCalib/include/: calib_info.h  calibration_parameter_finder.h
SNCalib/src/: calibration_paremeter_finder.cc  sncalib.cc
Tutorial/: calibration_parameters_tutorial.txt  udd2energy_tutorial.conf
include/: OM_data.h  calibration_cuts_driver.h  calibration_module.h
src/: calibration_cuts_driver.cc  calibration_module.cc
